@@ -1,62 +1,43 @@
 """ Create visualizations with datasources
 """
+from zope.app.component.hooks import getSite
+from zope.component import queryUtility
+from eea.app.visualization.controlpanel.interfaces import IDavizSettings
+
 class Daviz(object):
     """ Daviz
     """
-    def createNewDavizReuse(self):
-        """ create new visualization using 
-        the datasources of current visualization
+    def createNewDaviz(self):
+        """ Create new visualization
         """
-        objId = self.context.aq_parent.generateUniqueId("DavizVisualization")
-        relatedItems = self.context.getRelatedItems()
-        url = self.context.aq_parent.absolute_url() + \
-                "/portal_factory/DavizVisualization/" + \
-                objId + \
-                "/edit" + \
-                "?title=" + relatedItems[0].title
-        for item in relatedItems:
-            url = url + "&relatedItems:list=" + item.UID()
-        self.request.response.redirect(url)
-
-    def createNewDavizReuseObj(self):
-        """ create new visualization using 
-        as datasource the object of current visualization
-        """
-        objId = self.context.aq_parent.generateUniqueId("DavizVisualization")
-        url = self.context.aq_parent.absolute_url() + \
-                "/portal_factory/DavizVisualization/" + \
-                objId + \
-                "/edit" + \
-                "?title=" + self.context.title
-        url = url + "&relatedItems:list=" + self.context.UID()
-        self.request.response.redirect(url)
-
-    def createNewDavizSparql(self):
-        """ create new visualization using 
-        the current Sparql
-        """
-        # Find parent folder where Daviz can be created
-        folder = self.context.aq_parent
-        found = False
-        while True:
-            try:
-                allowedContentTypes = folder.allowedContentTypes()
-            except AttributeError:
-                break
-            for allowedContentType in allowedContentTypes:
-                if allowedContentType.id == "DavizVisualization":
-                    found = True
-            if found:
-                break
-            folder = folder.aq_parent
-        if not found:
-            return
+        davizsettings = queryUtility(IDavizSettings)
+        strFolder = davizsettings.settings.get("daviz.defaultfolder", "")
+        if (strFolder != ""):
+            portal = getSite()
+            folder = portal.restrictedTraverse(strFolder)
+        else:
+            folder = self.context.aq_parent
+            found = False
+            while True:
+                try:
+                    allowedContentTypes = folder.allowedContentTypes()
+                except AttributeError:
+                    break
+                for allowedContentType in allowedContentTypes:
+                    if allowedContentType.id == "DavizVisualization":
+                        found = True
+                if found:
+                    break
+                folder = folder.aq_parent
+            if not found:
+                return
 
         objId = folder.generateUniqueId("DavizVisualization")
         url = folder.absolute_url() + \
                 "/portal_factory/DavizVisualization/" + \
                 objId + \
                 "/edit" + \
-                "?title=" + self.context.title
-        url = url + "&relatedItems:list=" + self.context.UID()
+                "?title=" + self.context.title + \
+                "&relatedItems:list=" + self.context.UID()
         self.request.response.redirect(url)
+
