@@ -5,25 +5,9 @@
 
   <browser:page
     for="*"
-    name="daviz-new-reuse.html"
+    name="daviz-create-new.html"
     class=".app.daviz.Daviz"
-    attribute="createNewDavizReuse"
-    permission="cmf.ModifyPortalContent"
-    />
-
-  <browser:page
-    for="*"
-    name="daviz-new-reuse-obj.html"
-    class=".app.daviz.Daviz"
-    attribute="createNewDavizReuseObj"
-    permission="cmf.ModifyPortalContent"
-    />
-
-  <browser:page
-    for="*"
-    name="daviz-new-create-sparql.html"
-    class=".app.daviz.Daviz"
-    attribute="createNewDavizSparql"
+    attribute="createNewDaviz"
     permission="cmf.ModifyPortalContent"
     />
 
