@@ -10,5 +10,6 @@
   <include package=".data" />
   <include package=".content" />
   <include package=".upgrades" />
+  <include package=".controlpanel" />
 
 </configure>
